--- a/src/pages/PaginaInicial/Paginainicial.scss
+++ b/src/pages/PaginaInicial/Paginainicial.scss
@@ -1,6 +1,15 @@
 .paginainicial {
     display: flex;
+
+    
     .paginainicialContainer {
         flex: 6;
+
+
+        .ferramentas{
+            display: flex;
+            padding: 20px;
+            gap: 20px;
+        }
     }
 }
