--- a/src/pages/PaginaInicial/Paginainicial.scss
+++ b/src/pages/PaginaInicial/Paginainicial.scss
@@ -6,10 +6,23 @@
         flex: 6;
 
 
-        .ferramentas{
+        .ferramentas, .graficos{
             display: flex;
             padding: 20px;
             gap: 20px;
+        }
+
+        .ListaContainer{
+            -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
+            box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+            padding: 20px;
+            margin: 20px;
+
+            .ListaTitle{
+                font-weight: 500;
+                color: gray;
+                margin-bottom: 15px;
+            }
         }
     }
 }
