--- a/src/components/tabeladedados/tabeladados.scss
+++ b/src/components/tabeladedados/tabeladados.scss
@@ -19,11 +19,11 @@
         padding: 5px;
         border-radius: 5px;
 
-        &.active{
+        &.ativo{
             background-color: rgba(0, 128, 0, 0.05);
             color: green;
         }
-        &.pending{
+        &.pendente{
             background-color: rgba(255, 217, 0, 0.05);
             color: goldenrod;
         }
