--- a/src/components/tabeladedados/tabeladados.scss
+++ b/src/components/tabeladedados/tabeladados.scss
@@ -64,12 +64,14 @@
             border-radius: 5px;
             color: darkblue;
             border: 1px dotted rgba(0, 0, 139, 0.596);
+            cursor: pointer;
         }
         .deleteButton{
             padding: 2px 5px;
             border-radius: 5px;
             color: crimson;
             border: 1px dotted rgb(255, 0, 0);
+            cursor: pointer;
         }
     }
 }
